update menu and button work

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li class="menu-item"><a class="nav-link hover" href="#">Technology</a></li>
           <li class="menu-item"><a class="nav-link hover" href="#">Solutions</a></li>
           <li class="menu-item"><a class="nav-link hover" href="#">Crops</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">Farming Methods</a></li>
+          <li class="menu-item"><a class="nav-link hover" href="#">Packages</a></li>
           <li class="menu-item"><a class="nav-link hover" href="#">About Us</a></li>
           <!-- <li class="menu-item">
             <ul class="link-button">
@@ -40,8 +40,8 @@
           </li> -->
         </ul>
         <div class="btn-header">
-          <a class="btn white-btn hover" href="https://opensea.io/collection/mcb-founder-club">OpenSea</a>
-          <a class="btn dark-btn hover" href="https://mcb.cash/">MCB</a>
+          <a class="btn white-btn btn-hover" href="https://opensea.io/collection/mcb-founder-club">OpenSea</a>
+          <a class="btn dark-btn btn-hover" href="https://mcb.cash/">MCB</a>
         </div>
       </nav>
 
@@ -56,10 +56,10 @@
           <li class="menu-item hidden"><a class="nav-link hover" href="#">Technology</a></li>
           <li class="menu-item hidden"><a class="nav-link hover" href="#">Solutions</a></li>
           <li class="menu-item"><a class="nav-link hover" href="#">Crops</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">Farming Methods</a></li>
+          <li class="menu-item"><a class="nav-link hover" href="#">Packages</a></li>
           <li class="menu-item"><a class="nav-link hover" href="#">About Us</a></li>
-          <li class="menu-item"><a class="nav-link opensea hover" href="#">OpenSea</a></li>
-          <li class="menu-item"><a class="nav-link mcb hover" href="#">MCB</a></li>
+          <li class="menu-item"><a class="nav-link opensea btn-hover" href="#">OpenSea</a></li>
+          <li class="menu-item"><a class="nav-link mcb btn-hover" href="#">MCB</a></li>
         </ul>
       </div>
     </div>
@@ -74,7 +74,7 @@
         <p class="text hidden">MediCann is the Future of Sustainable Agriculture, integrating innovative cultivation methods,
           technology and close-loop systems to produce premium medical-grade cash crops.
         </p>
-        <a class="btn btn-work hover" href="https://mcbs-organization.gitbook.io/medicann/">How it work?</a>
+        <a class="btn btn-work btn-hover" href="#">How it work?</a>
       </div>
       <div class="content-right">
         <img class="banner-img" src="./assets/img/banner.png" alt="Banner">
