--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div class="f-container fixed-hf">
-    <header>
+    <header class="header">
       <div class="wrapper">
         <div class="logo" id="brand">
           <div class="logo">
@@ -60,7 +60,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="main">
       <div class="pre-content">
         <div class="content-left">
           <h1 class="text-pre">Premium<span class="dot">,</span><br class="mobile-dots" /> Sustainable<span
@@ -135,15 +135,17 @@
             <p class="subtext">Decide how you will be rewarded</p>
           </div>
           <div class="content-hover">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the
+            <p class="content-hover-text">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's
+              standard dummy text ever since the
+            </p>
           </div>
         </div>
       </div>
     </main>
 
-    <footer>
+    <footer class="footer">
       <div class="container">
         <div class="footer-content">
           <div class="item footer-left">
