style responsive version v1.0.0

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
             <button class="btn btn-contact" type="button">Contact Us</button>
           </div>
         </div>
+        <div class="mobile-footer copy-right">
+          <p class="copy-right-text">MediCann. All rights reserved 2023</p>
+        </div>
       </div>
     </footer>
   </div>
