style responsive version v2.1.0

--- a/index.html
+++ b/index.html
@@ -60,125 +60,130 @@
       </div>
     </header>
 
-    <main class="main">
-      <div class="pre-content">
-        <div class="content-left">
-          <h1 class="text-pre">Premium<span class="dot">,</span><br class="mobile-dots" /> Sustainable<span
-              class="dot">,</span><br class="mobile-dots" /> Plant Grown
-            Vertically in <span class="sub-text">Al Close-Loop</span>
-          </h1>
-          <p class="text hidden">
-            MediCann is the Future of Sustainable Agriculture, integrating innovative cultivation methods, modular
-            framing
-            technologies, and closed-loop sensors systems to produce high-value medical-grade cash crops.
-          </p>
-          <a class="btn btn-work btn-hover" href="#">How it work?</a>
-        </div>
-        <div class="content-right">
-          <img class="banner-img" src="./assets/img/banner.png" alt="Banner">
-        </div>
-      </div>
-      <div class="offer-content mobile-only">
-        <p class="text">WE OFFER CONSULTING & GROW SERVICES FOR CASH CROPS PRECISION CULTIVATION</p>
-        <div class="slider-breadcrumbs">
-          <div class="slider">
-            <ul class="breadcrumbs">
-              <li class="wait"><a class="link" href="#">Don't wait</a></li>
-              <li class="join"><a class="link" href="#">Join us</a></li>
-              <li class="earn"><a class="link" href="#">Earn now</a></li>
-            </ul>
-            <ul class="breadcrumbs">
-              <li class="wait"><a class="link" href="#">Don't wait</a></li>
-              <li class="join"><a class="link" href="#">Join us</a></li>
-              <li class="earn"><a class="link" href="#">Earn now</a></li>
-            </ul>
-            <ul class="breadcrumbs">
-              <li class="wait"><a class="link" href="#">Don't wait</a></li>
-              <li class="join"><a class="link" href="#">Join us</a></li>
-              <li class="earn"><a class="link" href="#">Earn now</a></li>
-            </ul>
+    <main>
+      <section class="block-main">
+        <div class="pre-content">
+          <div class="content-left">
+            <h1 class="text-pre">Premium<span class="dot">,</span><br class="mobile-dots" /> Sustainable<span
+                class="dot">,</span><br class="mobile-dots" /> Plant Grown
+              Vertically in <span class="sub-text">Al Close-Loop</span>
+            </h1>
+            <p class="text hidden">
+              MediCann is the Future of Sustainable Agriculture, integrating innovative cultivation methods, modular
+              framing
+              technologies, and closed-loop sensors systems to produce high-value medical-grade cash crops.
+            </p>
+            <a class="btn btn-work btn-hover" href="#">How it work?</a>
+          </div>
+          <div class="content-right">
+            <img class="banner-img" src="./assets/img/banner.png" alt="Banner">
           </div>
         </div>
-      </div>
-      <div class="flow-content numbered-block">
-        <div class="item cash-crop">
-          <div class="wrap">
-            <div class="content">
-              <div class="text-block">
-                <p class="text">Choose the right cash crops</p>
-                <p class="subtext">Select the best crops of your interest</p>
-              </div>
+        <div class="offer-content mobile-only">
+          <p class="text">WE OFFER CONSULTING & GROW SERVICES FOR CASH CROPS PRECISION CULTIVATION</p>
+          <div class="slider-breadcrumbs">
+            <div class="slider">
+              <ul class="breadcrumbs">
+                <li class="wait"><a class="link" href="#">Don't wait</a></li>
+                <li class="join"><a class="link" href="#">Join us</a></li>
+                <li class="earn"><a class="link" href="#">Earn now</a></li>
+              </ul>
+              <ul class="breadcrumbs">
+                <li class="wait"><a class="link" href="#">Don't wait</a></li>
+                <li class="join"><a class="link" href="#">Join us</a></li>
+                <li class="earn"><a class="link" href="#">Earn now</a></li>
+              </ul>
+              <ul class="breadcrumbs">
+                <li class="wait"><a class="link" href="#">Don't wait</a></li>
+                <li class="join"><a class="link" href="#">Join us</a></li>
+                <li class="earn"><a class="link" href="#">Earn now</a></li>
+              </ul>
             </div>
-            <img class="cash-icon" src="./assets/img/icon/cash-crop-icon.png" alt="icon-cash">
-          </div>
-          <div class="content-hover">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book.
           </div>
         </div>
-        <div class="item solution">
-          <div class="text-block">
-            <p class="text">Choose your solutions</p>
-            <p class="subtext">Pick our DePIN farming system</p>
-          </div>
-          <div class="content-hover">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s,
-          </div>
-        </div>
-        <div class="item package">
-          <div class="text-block">
-            <p class="text">Choose your package</p>
-            <p class="subtext">Decide how you will be rewarded</p>
-          </div>
-          <div class="content-hover">
-            <p class="content-hover-text">
+        <div class="flow-content numbered-block">
+          <div class="item cash-crop">
+            <div class="wrap">
+              <div class="content">
+                <div class="text-block">
+                  <p class="text">Choose the right cash crops</p>
+                  <p class="subtext">Select the best crops of your interest</p>
+                </div>
+              </div>
+              <img class="cash-icon" src="./assets/img/icon/cash-crop-icon.png" alt="icon-cash">
+            </div>
+            <div class="content-hover">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
               industry's
-              standard dummy text ever since the
-            </p>
+              standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+              to
+              make a type specimen book.
+            </div>
+          </div>
+          <div class="item solution">
+            <div class="text-block">
+              <p class="text">Choose your solutions</p>
+              <p class="subtext">Pick our DePIN farming system</p>
+            </div>
+            <div class="content-hover">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's
+              standard dummy text ever since the 1500s,
+            </div>
+          </div>
+          <div class="item package">
+            <div class="text-block">
+              <p class="text">Choose your package</p>
+              <p class="subtext">Decide how you will be rewarded</p>
+            </div>
+            <div class="content-hover">
+              <p class="content-hover-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's
+                standard dummy text ever since the
+              </p>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="item footer-left">
-            <p class="text"><i class="cert-icon"></i>WE OFFER CONSULTING & GROW SERVICES FOR CASH CROPS PRECISION
-              CULTIVATION</p>
-          </div>
-          <div class="item footer-center">
-            <ul class="breadcrumbs">
-              <li class="wait"><a class="link" href="#">Don't wait</a></li>
-              <li class="join"><a class="link" href="#">Join us</a></li>
-              <li class="earn"><a class="link" href="#">Earn now</a></li>
-            </ul>
-          </div>
-          <div class="item footer-right">
-            <button class="btn btn-contact" type="button">Contact Us</button>
-            <div class="content-avatar">
-              <img src="./assets/img/icon/avatar-icon.png" alt="Avatar">
+      <div class="footert-wrapper">
+        <div class="container">
+          <div class="footer-content">
+            <div class="item footer-left">
+              <p class="text"><i class="cert-icon"></i>WE OFFER CONSULTING & GROW SERVICES FOR CASH CROPS PRECISION
+                CULTIVATION</p>
+            </div>
+            <div class="item footer-center">
+              <ul class="breadcrumbs">
+                <li class="wait"><a class="link" href="#">Don't wait</a></li>
+                <li class="join"><a class="link" href="#">Join us</a></li>
+                <li class="earn"><a class="link" href="#">Earn now</a></li>
+              </ul>
+            </div>
+            <div class="item footer-right">
+              <button class="btn btn-contact" type="button">Contact Us</button>
+              <div class="content-avatar">
+                <img src="./assets/img/icon/avatar-icon.png" alt="Avatar">
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- Mobilr Footer -->
-        <div class="mobile-footer">
-          <div class="img-brand">
-            <img src="./assets/img/logo.png" alt="Logo">
-            <img src="./assets/img/icon/avatar-icon.png" alt="Avatar">
+          <!-- Mobilr Footer -->
+          <div class="mobile-footer">
+            <div class="img-brand">
+              <img src="./assets/img/logo.png" alt="Logo">
+              <img src="./assets/img/icon/avatar-icon.png" alt="Avatar">
+            </div>
+            <div class="btn-content">
+              <button class="btn btn-contact" type="button">Contact Us</button>
+            </div>
           </div>
-          <div class="btn-content">
-            <button class="btn btn-contact" type="button">Contact Us</button>
+          <div class="mobile-footer copy-right">
+            <p class="copy-right-text">MediCann. All rights reserved 2023</p>
           </div>
-        </div>
-        <div class="mobile-footer copy-right">
-          <p class="copy-right-text">MediCann. All rights reserved 2023</p>
         </div>
       </div>
     </footer>
