style responsive version v3.0.3

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="content-left">
           <h1 class="text-pre">Premium<span class="dot">,</span><br class="mobile-dots" /> Sustainable<span
               class="dot">,</span><br class="mobile-dots" /> Plant Grown
-            Vertically in <span class="sub-text">Al Close-Loop</span>
+            Vertically<br class="mobile-dots" />in <span class="sub-text">Al Close-Loop</span>
           </h1>
           <p class="text hidden">
             MediCann is the Future of Sustainable Agriculture, integrating innovative cultivation methods, modular
