import link for a tag

--- a/index.html
+++ b/index.html
@@ -27,15 +27,31 @@
       </div>
       <nav class="menu-header">
         <ul class="menu-content">
-          <li class="menu-item"><a class="nav-link hover" href="#">Technology</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">Solutions</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">Crops</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">Packages</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">About Us</a></li>
+          <li class="menu-item">
+            <a class="nav-link hover"
+              href="https://mcbs-organization.gitbook.io/medicann/medicann-4.0/technology-pillars"
+              target="_blank">Technology</a>
+          </li>
+          <li class="menu-item">
+            <a class="nav-link hover"
+              href="https://mcbs-organization.gitbook.io/medicann/medicann-4.0/medicann-vs.-traditional-farming-methods"
+              target="_blank">Solutions</a>
+          </li>
+          <li class="menu-item">
+            <a class="nav-link hover" href="https://mcbs-organization.gitbook.io/medicann/overview/cash-crop-categories"
+              target="_blank">Crops</a>
+          </li>
+          <li class="menu-item">
+            <a class="nav-link hover" href="https://mcbs-organization.gitbook.io/medicann/mcb-nfts/gro-collection"
+              target="_blank">Packages</a>
+          </li>
+          <li class="menu-item"><a class="nav-link hover" href="https://linktr.ee/medicann" target="_blank">About
+              Us</a></li>
         </ul>
         <div class="btn-header">
-          <a class="btn white-btn btn-hover" href="https://opensea.io/collection/mcb-founder-club">OpenSea</a>
-          <a class="btn dark-btn btn-hover" href="https://mcb.cash/">MCB</a>
+          <a class="btn white-btn btn-hover" href="https://opensea.io/collection/mcb-founder-club"
+            target="_blank">OpenSea</a>
+          <a class="btn dark-btn btn-hover" href="https://mcb.cash/" target="_blank">MCB</a>
         </div>
       </nav>
 
@@ -47,13 +63,33 @@
         <div class="menu-mobile-icon bar2"></div>
         <div class="menu-mobile-icon bar3"></div>
         <ul class="mobile-menu">
-          <li class="menu-item hidden"><a class="nav-link hover" href="#">Technology</a></li>
-          <li class="menu-item hidden"><a class="nav-link hover" href="#">Solutions</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">Crops</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">Packages</a></li>
-          <li class="menu-item"><a class="nav-link hover" href="#">About Us</a></li>
-          <li class="menu-item"><a class="nav-link opensea btn-hover" href="#">OpenSea</a></li>
-          <li class="menu-item"><a class="nav-link mcb btn-hover" href="#">MCB</a></li>
+          <li class="menu-item hidden">
+            <a class="nav-link hover"
+              href="https://mcbs-organization.gitbook.io/medicann/medicann-4.0/technology-pillars"
+              target="_blank">Technology</a>
+          </li>
+          <li class="menu-item hidden">
+            <a class="nav-link hover"
+              href="https://mcbs-organization.gitbook.io/medicann/medicann-4.0/medicann-vs.-traditional-farming-methods"
+              target="_blank">Solutions</a>
+          </li>
+          <li class="menu-item">
+            <a class="nav-link hover" href="https://mcbs-organization.gitbook.io/medicann/overview/cash-crop-categories"
+              target="_blank">Crops</a>
+          </li>
+          <li class="menu-item">
+            <a class="nav-link hover" href="https://mcbs-organization.gitbook.io/medicann/mcb-nfts/gro-collection"
+              target="_blank">Packages</a>
+          </li>
+          <li class="menu-item">
+            <a class="nav-link hover" href="https://linktr.ee/medicann" target="_blank">About
+              Us</a>
+          </li>
+          <li class="menu-item">
+            <a class="nav-link opensea btn-hover" href="https://opensea.io/collection/mcb-founder-club"
+              target="_blank">OpenSea</a>
+          </li>
+          <li class="menu-item"><a class="nav-link mcb btn-hover" href="https://mcb.cash/" target="_blank">MCB</a></li>
         </ul>
       </div>
     </div>
@@ -72,7 +108,9 @@
             framing
             technologies, and closed-loop sensors systems to produce high-value medical-grade cash crops.
           </p>
-          <a class="btn btn-work btn-hover" href="#">How it work?</a>
+          <a class="btn btn-work btn-hover"
+            href="https://drive.google.com/file/d/1ncg18znPLNJ4VOYgD5b7CG3gEQdRI99G/view" target="_blank">How
+            it work?</a>
         </div>
         <div class="content-right">
           <img class="banner-img" src="./assets/img/banner.png" alt="Banner">
@@ -163,7 +201,7 @@
             </ul>
           </div>
           <div class="item footer-right">
-            <button class="btn btn-contact" type="button">Contact Us</button>
+            <a class="btn btn-contact" href="https://t.me/lchrislu" target="_blank">Contact Us</a>
             <div class="content-avatar">
               <img src="./assets/img/icon/avatar-icon.png" alt="Avatar">
             </div>
@@ -177,7 +215,7 @@
             <img src="./assets/img/icon/avatar-icon.png" alt="Avatar">
           </div>
           <div class="btn-content">
-            <button class="btn btn-contact" type="button">Contact Us</button>
+            <a class="btn btn-contact" href="https://t.me/lchrislu" target="_blank">Contact Us</a>
           </div>
         </div>
         <div class="mobile-footer copy-right">
