update meta and update text content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Demicann</title>
+
+  <title>MediCann | Vertical Farming Solutions for Medical Cash Crops</title>
+  <meta name="description"
+    content="MediCann offers vertical farming solutions for medical grade cash crops. Pick your crops, choose your solutions and be rewarded !">
+
+  <link rel="icon" type="image/x-icon" href="./assets/img/icon/favicon.ico">
 
   <!-- Slick Slider -->
   <link rel="stylesheet" href="./assets/slick-slider/slick.css">
@@ -101,7 +106,7 @@
         <div class="content-left">
           <h1 class="text-pre">Premium<span class="dot">,</span><br class="mobile-dots" /> Sustainable<span
               class="dot">,</span><br class="mobile-dots" /> Plant Grown
-            Vertically <br class="mobile-dots" />in <span class="sub-text">Al Close-Loop</span>
+            Vertically <br class="mobile-dots" />in <span class="sub-text">AI Closed-Loop</span>
           </h1>
           <p class="text hidden">
             MediCann is the Future of Sustainable Agriculture, integrating innovative cultivation methods, modular
@@ -110,7 +115,7 @@
           </p>
           <a class="btn btn-work btn-hover"
             href="https://drive.google.com/file/d/1ncg18znPLNJ4VOYgD5b7CG3gEQdRI99G/view" target="_blank">How
-            it work?</a>
+            it works?</a>
         </div>
         <div class="content-right">
           <img class="banner-img" src="./assets/img/banner.png" alt="Banner">
@@ -150,11 +155,9 @@
             <img class="cash-icon" src="./assets/img/icon/cash-crop-icon.png" alt="icon-cash">
           </div>
           <div class="content-hover">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-            to
-            make a type specimen book.
+            Elevate your farming business with our versatile closed-loop system, perfect for cultivating premium cash
+            crops such as medical cannabis, microgreens, saffron, and exclusive mushrooms including cordyceps and
+            truffles.
           </div>
         </div>
         <div class="item solution">
@@ -163,9 +166,9 @@
             <p class="subtext">Pick our DePIN farming system</p>
           </div>
           <div class="content-hover">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s,
+            Harnessing the power of Precision Agriculture System, MediCann combines cutting-edge sensors and data
+            analytics to pioneer the future of agriculture. Dive into remote digital farming, robotic automation,
+            sensory harvesting, and ultra-precise irrigation and fertilization.
           </div>
         </div>
         <div class="item package">
@@ -175,9 +178,8 @@
           </div>
           <div class="content-hover">
             <p class="content-hover-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's
-              standard dummy text ever since the
+              Customize your membership experience by choosing how you want to be rewarded. Unlock exclusive benefits,
+              discounts, and rewards tailored to your preferences. With flexibility in your hands, the choice is yours.
             </p>
           </div>
         </div>
